changed login and register templates

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,41 +22,36 @@
         <link rel="stylesheet" href="css/mdb.min.css" />
 </head>
 <body>
-  <section class="w-100 d-flex justify-content-center position-absolute top-50 start-50 translate-middle">
-    <form style="width: 22rem;" th:method="post" th:action="@{/login}">
-      <!-- Email input -->
-      <div class="form-outline mb-4">
-        <input type="email" name="username" id="form1Example1" class="form-control">
-        <label class="form-label" for="form1Example1" style="margin-left: 0px;">Email address</label>
-      <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 88.8px;"></div><div class="form-notch-trailing"></div></div></div>
+<div class="text-center my-5">
+    <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">
+</div>
 
-      <!-- Password input -->
-      <div class="form-outline mb-4">
-        <input type="password" name="password" id="form1Example2" class="form-control">
-        <label class="form-label" for="form1Example2" style="margin-left: 0px;">Password</label>
-      <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 64.8px;"></div><div class="form-notch-trailing"></div></div></div>
+<div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="card shadow-2-strong" style="border-radius: 1rem;">
+                <div class="card-body p-5 text-center">
 
-      <!-- 2 column grid layout for inline styling -->
-      <div class="row mb-4">
-        <div class="col d-flex justify-content-center">
-          <!-- Checkbox -->
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="form1Example3" checked="">
-            <label class="form-check-label" for="form1Example3"> Remember me </label>
-          </div>
+                    <h3 class="mb-5">Login</h3>
+                    <form th:action="@{/login}" th:method="post">
+
+                        <div class="form-outline mb-4">
+                            <input type="email" id="email" class="form-control form-control-lg" name="username">
+                            <label class="form-label" for="email" style="margin-left: 0px;">Email</label>
+                            <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 43.2px;"></div><div class="form-notch-trailing"></div></div></div>
+
+                        <div class="form-outline mb-4">
+                            <input type="password" id="password" class="form-control form-control-lg" name="password">
+                            <label class="form-label" for="password" style="margin-left: 0px;">Password</label>
+                            <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 68px;"></div><div class="form-notch-trailing"></div></div></div>
+
+                        <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+                    </form>
+                </div>
+            </div>
         </div>
-
-        <div class="col">
-          <!-- Simple link -->
-          <a href="#!">Forgot password?</a>
-        </div>
-      </div>
-
-      <!-- Submit button -->
-      <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-    </form>
-  </section>
-
+    </div>
+</div>
 
     </body>
 </html>
