--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -23,41 +23,52 @@
 </head>
 <body>
 
-    <section class="w-100 d-flex justify-content-center position-absolute top-50 start-50 translate-middle">
-        <form style="width: 26rem;" th:method="post" th:action="@{/register}" th:object="${registerDto}">
-            <!-- Username input -->
-            <div class="form-outline mb-4">
-                <input type="text" id="username" class="form-control" th:field="*{username}" th:errorclass="is-invalid">
-                <label class="form-label" for="username" style="margin-left: 0px;">Display name</label>
-                <div class="invalid-feedback">Please choose a username.</div>
-              <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 88.8px;"></div><div class="form-notch-trailing"></div></div></div>
-    
-            <!-- Email input -->
-            <div class="form-outline mb-4">
-              <input type="email" id="email" class="form-control"  th:field="*{email}" th:errorclass="is-invalid">
-              <label class="form-label" for="email" style="margin-left: 0px;">Email address</label>
-                <div class="invalid-feedback">Please choose a username.</div>
-            <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 88.8px;"></div><div class="form-notch-trailing"></div></div></div>
-  
-            <!-- Password input -->
-            <div class="form-outline mb-4">
-              <input type="password" id="password" class="form-control" th:field="*{password}" th:errorclass="is-invalid">
-              <label class="form-label" for="password" style="margin-left: 0px;">Password</label>
-                <div class="invalid-feedback">Please choose a username.</div>
-            <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 64.8px;"></div><div class="form-notch-trailing"></div></div></div>
-  
-            <!-- Confrim Password input -->
-            <div class="form-outline mb-4">
-                <input type="password" id="confirmPassword" class="form-control" th:field="*{confirmPassword}" th:errorclass="is-invalid">
-                <label class="form-label" for="confirmPassword" style="margin-left: 0px;">Confirm Password</label>
-                <div class="invalid-feedback">Please choose a username.</div>
-              <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 64.8px;"></div><div class="form-notch-trailing"></div></div></div>
-    
-            <!-- Submit button -->
-            <button type="submit" class="btn btn-primary btn-block mb-4">Sign up</button>
-  
-          </form>
-    </section>
+<div class="text-center my-5">
+    <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">
+</div>
 
+<div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="card shadow-2-strong" style="border-radius: 1rem;">
+                <div class="card-body p-5 text-center">
+
+                    <h3 class="mb-5">Register</h3>
+                    <form th:action="@{/register}" th:method="post" th:object="${registerDto}">
+
+                    <div class="form-outline mb-4">
+                        <input type="email" id="email" class="form-control form-control-lg" th:field="*{email}" th:errorclass="is-invalid">
+                        <label class="form-label" for="email" style="margin-left: 0px;">Email</label>
+                        <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 43.2px;"></div><div class="form-notch-trailing"></div></div>
+                        <div class="invalid-feedback">Error</div></div>
+
+
+                    <div class="form-outline mb-4">
+                        <input type="text" id="username" class="form-control form-control-lg" th:field="*{username}" th:errorclass="is-invalid">
+                        <label class="form-label" for="username" style="margin-left: 0px;">Username</label>
+                        <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 43.2px;"></div><div class="form-notch-trailing"></div></div>
+                        <div class="invalid-feedback">Error</div></div>
+
+
+                    <div class="form-outline mb-4">
+                        <input type="password" id="password" class="form-control form-control-lg" th:field="*{password}" th:errorclass="is-invalid">
+                        <label class="form-label" for="password" style="margin-left: 0px;">Password</label>
+                        <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 68px;"></div><div class="form-notch-trailing"></div></div>
+                        <div class="invalid-feedback">Error</div></div>
+
+                    <div class="form-outline mb-4">
+                        <input type="password" id="confirmPassword" class="form-control form-control-lg" th:field="*{confirmPassword}" th:errorclass="is-invalid">
+                        <label class="form-label" for="confirmPassword" style="margin-left: 0px;">Confirm Password</label>
+                        <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 68px;"></div><div class="form-notch-trailing"></div></div>
+                        <div class="invalid-feedback">Error</div></div>
+
+
+                    <button class="btn btn-primary btn-lg btn-block" type="submit">Register</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
