--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,10 +33,14 @@
                 <div class="card-body p-5 text-center">
 
                     <h3 class="mb-5">Login</h3>
+
+                    <p th:if="${bad_credentials}" class="errors alert alert-danger">
+                        Invalid username or password.
+                    </p>
                     <form th:action="@{/login}" th:method="post">
 
                         <div class="form-outline mb-4">
-                            <input type="email" id="email" class="form-control form-control-lg" name="username">
+                            <input type="email" id="email" class="form-control form-control-lg" th:classappend ="${username != null && username.length > 0} ? active" th:value="${username}" name="username">
                             <label class="form-label" for="email" style="margin-left: 0px;">Email</label>
                             <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 43.2px;"></div><div class="form-notch-trailing"></div></div></div>
 
