--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -67,7 +67,7 @@
 
           </ul>
         <!-- Left links -->
-        <div class="w-100 p-1 px-4">
+        <div class="w-100 p-1 px-4" sec:authorize="isAuthenticated()">
             <form class="input-group w-auto my-auto d-none d-sm-flex">
               <input
                 autocomplete="off"
@@ -82,7 +82,7 @@
             </form>
             </div>
         <!-- USER -->
-        <div class="dropdown">
+        <div class="dropdown" sec:authorize="isAuthenticated()">
             <a
                 class="dropdown-toggle d-flex align-items-center hidden-arrow"
                 href="#"
@@ -119,13 +119,13 @@
             </ul>
             </div>
 
-        <div class="d-flex align-items-center">
-          <button type="button" class="btn btn-link px-3 me-2">
+        <div class="d-flex align-items-center" sec:authorize="!isAuthenticated()">
+          <a th:href="@{/login}" class="btn btn-link px-3 me-2">
             Login
-          </button>
-          <button type="button" class="btn btn-primary me-3">
+          </a>
+          <a th:href="@{/register}" class="btn btn-primary me-3">
             Sign up for free
-          </button>
+          </a>
         </div>
       </div>
       <!-- Collapsible wrapper -->
