--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,25 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="./js/mdb.min.js"></script>
-    <title>Document</title>
-            <!-- MDB icon -->
-            <link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
-            <!-- Font Awesome -->
-            <link
-              rel="stylesheet"
-              href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-            />
-            <!-- Google Fonts Roboto -->
-            <link
-              rel="stylesheet"
-              href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
-            />
-            <!-- MDB -->
-            <link rel="stylesheet" href="css/mdb.min.css" />
+    <th:block th:replace="/fragments/head"></th:block>
+    <title>MusicLoud - Register</title>
+
 </head>
 <body>
 
@@ -40,27 +24,27 @@
                         <input type="email" id="email" class="form-control form-control-lg" th:classappend ="*{email != null && email.length > 0} ? active" th:field="*{email}" th:errorclass="is-invalid">
                         <label class="form-label" for="email" style="margin-left: 0px;">Email</label>
                         <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 43.2px;"></div><div class="form-notch-trailing"></div></div>
-                        <div class="invalid-feedback">Error</div></div>
+                        <div class="invalid-feedback mb-2" th:if="${#fields.hasErrors('email')}" th:text="${#fields.errors('email').get(0)}">Error</div></div>
 
 
                     <div class="form-outline mb-4">
                         <input type="text" id="username" class="form-control form-control-lg" th:classappend ="*{username != null && username.length > 0} ? active" th:field="*{username}" th:errorclass="is-invalid">
                         <label class="form-label" for="username" style="margin-left: 0px;">Username</label>
                         <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 43.2px;"></div><div class="form-notch-trailing"></div></div>
-                        <div class="invalid-feedback">Error</div></div>
+                        <div class="invalid-feedback">Username is required.</div></div>
 
 
                     <div class="form-outline mb-4">
                         <input type="password" id="password" class="form-control form-control-lg" th:field="*{password}" th:errorclass="is-invalid">
                         <label class="form-label" for="password" style="margin-left: 0px;">Password</label>
                         <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 68px;"></div><div class="form-notch-trailing"></div></div>
-                        <div class="invalid-feedback">Error</div></div>
+                        <div class="invalid-feedback">Password must be between 8 and 32 characters long.</div></div>
 
                     <div class="form-outline mb-4">
                         <input type="password" id="confirmPassword" class="form-control form-control-lg" th:field="*{confirmPassword}" th:errorclass="is-invalid">
                         <label class="form-label" for="confirmPassword" style="margin-left: 0px;">Confirm Password</label>
                         <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 68px;"></div><div class="form-notch-trailing"></div></div>
-                        <div class="invalid-feedback">Error</div></div>
+                        <div class="invalid-feedback" th:if="${#fields.hasErrors('confirmPassword')}" th:text="${#fields.errors('confirmPassword').get(0)}">Error</div></div>
 
 
                     <button class="btn btn-primary btn-lg btn-block" type="submit">Register</button>
