profile edit html and css fix

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -10,7 +10,7 @@
                     loading="lazy"
                     style="margin-top: -1px;"
             />
-            <small>Softuni-Cloud</small>
+            <small>MusicLoud</small>
         </a>
 
         <!-- Toggle button -->
