--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -3,10 +3,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="css/mdb.min.css">
-<script type="text/javascript" src="./js/mdb.min.js"></script>
-<!-- MDB icon -->
-<link rel="icon" href="img/mdb-favicon.ico" type="image/x-icon" />
+<link rel="stylesheet" th:href="@{/css/mdb.min.css}">
+<script type="text/javascript" th:src="@{/js/mdb.min.js}"></script>
 <!-- Font Awesome -->
 <link
         rel="stylesheet"
