--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -3,14 +3,7 @@
     <div class="container">
         <!-- Navbar brand -->
         <a class="navbar-brand me-2" href="/">
-            <img
-                    src="https://mdbcdn.b-cdn.net/img/logo/mdb-transaprent-noshadows.webp"
-                    height="16"
-                    alt="MDB Logo"
-                    loading="lazy"
-                    style="margin-top: -1px;"
-            />
-            <small>MusicLoud</small>
+            <h2 id="logo-main" class="mb-0" style="font-size: 16px;"><span id="logo-text" style="color: rgb(255, 255, 255);" contenteditable="true"><span style="font-family: Nerko One;">musiCloud</span></span><span id="logo-icon" style="box-shadow: none !important; background-color: rgb(255, 120, 0); border-radius: 20%;"><i class="fas fa-cloud" style="color: rgb(238, 237, 237);"></i></span></h2>
         </a>
 
         <!-- Toggle button -->
@@ -82,7 +75,7 @@
                         <a class="dropdown-item" th:href="@{/profile}">My profile</a>
                     </li>
                     <li>
-                        <a class="dropdown-item" href="#">Settings</a>
+                        <a class="dropdown-item" th:href="@{/settings}">Settings</a>
                     </li>
                     <li>
                         <!--                <a class="dropdown-item" href="#">Logout</a>-->
