--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -3,7 +3,7 @@
     <div class="container">
         <!-- Navbar brand -->
         <a class="navbar-brand me-2" href="/">
-            <h2 id="logo-main" class="mb-0" style="font-size: 16px;"><span id="logo-text" style="color: rgb(255, 255, 255);" contenteditable="true"><span style="font-family: Nerko One;">musiCloud</span></span><span id="logo-icon" style="box-shadow: none !important; background-color: rgb(255, 120, 0); border-radius: 20%;"><i class="fas fa-cloud" style="color: rgb(238, 237, 237);"></i></span></h2>
+            <h2 id="logo-main" class="mb-0" style="font-size: 16px;"><span id="logo-text" style="color: rgb(255, 255, 255);" contenteditable="true"><span  spellcheck="false" style="font-family: Nerko One;">musiCloud</span></span><span id="logo-icon" style="box-shadow: none !important; background-color: rgb(255, 120, 0); border-radius: 20%;"><i class="fas fa-cloud" style="color: rgb(238, 237, 237);"></i></span></h2>
         </a>
 
         <!-- Toggle button -->
@@ -65,14 +65,15 @@
                             alt="Black and White Portrait of a Man"
                             loading="lazy"
                     />
-                    <strong class="d-none d-sm-block ms-1 text-light"><span sec:authentication="name"></span></strong>
+                    <strong class="d-none d-sm-block ms-1 text-light"><span th:text="${#authentication.principal.displayName}"></span></strong>
                 </a>
                 <ul
                         class="dropdown-menu dropdown-menu-end"
                         aria-labelledby="navbarDropdownMenuAvatar"
                 >
                     <li>
-                        <a class="dropdown-item" th:href="@{/profile}">My profile</a>
+                        <a class="dropdown-item" th:href="@{/user/{uuid}(uuid = ${#authentication.principal.id})}">My profile</a>
+
                     </li>
                     <li>
                         <a class="dropdown-item" th:href="@{/settings}">Settings</a>
