--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
     <title>Title</title>
     <th:block th:replace="/fragments/head"></th:block>
 </head>
-<body>
+<body class="bg-dark bg-opacity-10">
 <th:block th:replace="/fragments/nav"></th:block>
 
 </body>
