--- a/src/main/resources/templates/player.html
+++ b/src/main/resources/templates/player.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body class="bg-dark bg-opacity-10">
 <audio controls>
   <source src="/media/epic.mp3" type="audio/mpeg">
 </audio>
