--- a/src/main/resources/templates/profile-details.html
+++ b/src/main/resources/templates/profile-details.html
@@ -3,8 +3,9 @@
 <head>
     <title>Profile</title>
     <th:block th:replace="/fragments/head"></th:block>
+
 </head>
-<body>
+<body class="bg-dark bg-opacity-10">
 <th:block th:replace="/fragments/nav"></th:block>
 
 <section class="w-100 px-4 py-5 gradient-custom-2" style="border-radius: .5rem .5rem 0 0;">
@@ -14,11 +15,11 @@
             <div class="card">
                 <div class="rounded-top text-white d-flex flex-row" style="background-color: #000; height:200px;">
                     <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px;">
-                        <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp" alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2" style="width: 150px; z-index: 1">
+                        <img th:src="${user.imageUrl}" alt="Generic placeholder image" class="img-fluid img-thumbnail mt-4 mb-2" style="width: 150px; z-index: 1">
                         <button style="z-index: 1;" type="button" class="btn-dark" data-mdb-toggle="modal" data-mdb-target="#editProfileModal">Edit Profile</button>
                     </div>
                     <div class="ms-3" style="margin-top: 130px;">
-                        <h5>Name</h5>
+                        <h5 th:text="${user.getFullName}">Name</h5>
                         <p>Role</p>
                     </div>
                 </div>
@@ -72,12 +73,22 @@
                     <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form th:method="post" th:action="@{/profile/edit}" th:object="${editProfileDto}">
+                    <form th:method="post" th:action="@{/profile/edit}" th:object="${user}" enctype="multipart/form-data">
                     <div class="row mb-4 justify-content-center">
                         <div style="width: 22rem;">
                             <label class="form-label" for="customFile">Upload profile photo</label>
                             <input type="file" class="form-control" id="customFile" name="image">
                         </div>
+<!--                        <div class="avatar-upload">-->
+<!--                            <div class="avatar-edit">-->
+<!--                                <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg" />-->
+<!--                                <label for="imageUpload"></label>-->
+<!--                            </div>-->
+<!--                            <div class="avatar-preview">-->
+<!--                                <div id="imagePreview" style="background-image: url(http://i.pravatar.cc/500?img=7);">-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
                     </div>
                     <!-- 2 column grid layout with text inputs for the first and last names -->
                     <div class="row mb-4">
