--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,7 +5,7 @@
     <title>MusicLoud - Register</title>
 
 </head>
-<body>
+<body class="bg-dark bg-opacity-10">
 
 <div class="text-center my-5">
     <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">
