--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -20,7 +20,7 @@
               <p class="mb-0">Email</p>
             </div>
             <div class="col-sm-6">
-              <p class="text-muted mb-0">example@email</p>
+              <p class="text-muted mb-0" th:text="${#authentication.principal.username}">example@email</p>
 
             </div>
             <div class="col-sm-2">
@@ -58,25 +58,25 @@
         <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form th:method="post" th:action="@{/settings/}">
+        <form th:method="post" th:action="@{/settings/password}">
           <!-- Number input -->
           <div class="form-outline mb-4">
-            <input type="password" id="oldPassword" class="form-control">
-            <label class="form-label" for="form6Example4" style="margin-left: 0px;">Old password</label>
+            <input type="password" id="oldPassword" class="form-control" name="oldPassword">
+            <label class="form-label" for="oldPassword" style="margin-left: 0px;">Old password</label>
             <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 55.2px;"></div><div class="form-notch-trailing"></div></div></div>
 
           <!-- Message input -->
           <div class="row mb-4">
             <div class="col">
               <div class="form-outline">
-                <input type="password" id="password" class="form-control">
-                <label class="form-label" for="form6Example1" style="margin-left: 0px;">New password</label>
+                <input type="password" id="password" class="form-control" name="password">
+                <label class="form-label" for="password" style="margin-left: 0px;">New password</label>
                 <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 68.8px;"></div><div class="form-notch-trailing"></div></div></div>
             </div>
             <div class="col">
               <div class="form-outline">
-                <input type="password" id="confirmPassword" class="form-control">
-                <label class="form-label" for="form6Example2" style="margin-left: 0px;">Confirm password</label>
+                <input type="password" id="confirmPassword" class="form-control" name="confirmPassword">
+                <label class="form-label" for="confirmPassword" style="margin-left: 0px;">Confirm password</label>
                 <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 68px;"></div><div class="form-notch-trailing"></div></div></div>
             </div>
           </div>
@@ -84,7 +84,7 @@
             <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">
               Close
             </button>
-            <button type="button" class="btn btn-primary">Change password</button>
+            <button type="submit" class="btn btn-primary">Change password</button>
           </div>
         </form>
       </div>
@@ -101,9 +101,9 @@
         <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <form>
+        <form th:method="post" th:action="@{/settings/email}">
           <div class="form-outline mb-4">
-            <input type="email" id="form6Example5" class="form-control">
+            <input type="email" id="form6Example5" class="form-control" name="email">
             <label class="form-label" for="form6Example5" style="margin-left: 0px;">Email</label>
             <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 40px;"></div><div class="form-notch-trailing"></div></div></div>
 
@@ -111,7 +111,7 @@
             <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">
               Close
             </button>
-            <button type="button" class="btn btn-primary">Change email</button>
+            <button type="submit" class="btn btn-primary">Change email</button>
           </div>
         </form>
       </div>
