fixed user image upload and started working on song upload

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <th:block th:replace="/fragments/head"></th:block>
-    <title>MusicLoud - Login</title>
+    <title>Login - musiCloud</title>
 
 </head>
 <body class="bg-dark bg-opacity-10">
+<th:block th:replace="/fragments/nav"></th:block>
 <div class="text-center my-5">
     <img src="https://getbootstrap.com/docs/5.0/assets/brand/bootstrap-logo.svg" alt="logo" width="100">
 </div>
