--- a/src/main/resources/templates/settings.html
+++ b/src/main/resources/templates/settings.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Title</title>
+  <title>Settings - musiCloud</title>
   <th:block th:replace="/fragments/head"></th:block>
 </head>
 <body class="bg-dark bg-opacity-10">
