--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="#">Library</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Upload</a>
+                    <a class="nav-link" th:href="@{/upload}">Upload</a>
                 </li>
 
 
