--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" th:href="@{/css/mdb.min.css}">
-<script type="text/javascript" th:src="@{/js/mdb.min.js}"></script>
-<!-- Font Awesome -->
-<link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-/>
-<!-- Google Fonts Roboto -->
-<link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap"
-/>
+    <title>Upload - musiCloud</title>
+    <th:block th:replace="~{/fragments/head}"></th:block>
+    <link rel="stylesheet" th:href="@{/css/img.upload.css}">
+
 </head>
-<body>
-<div class="file-upload-wrapper">
-  <input type="file" id="input-file-now" class="file-upload" />
+<body class="bg-dark bg-opacity-10">
+<th:block th:replace="~{/fragments/nav}"></th:block>
+
+<div class="row mb-4 justify-content-center">
+    <div class="avatar-upload circle">
+        <div class="avatar-edit">
+            <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg" name="image"/>
+            <label class="fas fa-edit circle"  for="imageUpload"></label>
+        </div>
+        <div class="avatar-preview">
+            <div id="imagePreview" class="circle" th:style="'background-image: url('+ ${#authentication.principal.imageUrl}+ ');'">
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
