cloudinary song upload

--- a/src/main/resources/templates/profile-details.html
+++ b/src/main/resources/templates/profile-details.html
@@ -85,7 +85,7 @@
                                 <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg" name="image"/>
                                 <label class="fas fa-edit circle"  for="imageUpload"></label>
                             </div>
-                            <div class="avatar-preview">
+                            <div class="avatar-preview circle">
                                 <div id="imagePreview" class="circle" th:style="'background-image: url('+ ${#authentication.principal.imageUrl}+ ');'">
                                 </div>
                             </div>
