--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -15,13 +15,14 @@
             <div class="card shadow-2-strong" style="border-radius: 1rem;">
                 <div class="card-body p-5 text-center">
 
-                    <form th:action="@{/upload}" th:method="post" enctype="multipart/form-data">
+                    <form th:action="@{/upload}" th:method="post" enctype="multipart/form-data" th:object="${songUploadDto}">
                         <label class="form-label" for="customFile">Choose your song</label>
-                        <input type="file" class="form-control" id="customFile"  accept=".mp3, .avi, .mp4" name="songFile"/>
+                        <input type="file" class="form-control" id="customFile"  accept=".mp3, .avi, .mp4" th:field="*{songFile}" th:errorclass="is-invalid"/>
+                        <div class="invalid-feedback mb-2">Select a song to upload!(20MB max)</div>
 
                         <div class="avatar-upload">
                             <div class="avatar-edit circle">
-                                <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg" name="imageFile"/>
+                                <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg" name="imageFile" th:field="*{imageFile}"/>
                                 <label class="fas fa-edit circle"  for="imageUpload"></label>
                             </div>
                             <div class="avatar-preview">
@@ -31,9 +32,10 @@
                         </div>
 
                         <div class="form-outline mb-4">
-                            <input type="email" id="title" class="form-control form-control-lg" name="title">
+                            <input type="text" id="title" class="form-control form-control-lg" th:field="*{title}" th:errorclass="is-invalid" th:classappend ="*{title != null && title.length > 0} ? active">
                             <label class="form-label" for="title" style="margin-left: 0px;">Title</label>
-                            <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 43.2px;"></div><div class="form-notch-trailing"></div></div></div>
+                            <div class="form-notch"><div class="form-notch-leading" style="width: 9px;"></div><div class="form-notch-middle" style="width: 43.2px;"></div><div class="form-notch-trailing"></div></div>
+                            <div class="invalid-feedback mb-2">Title is required!</div></div>
 
                         <button class="btn btn-primary btn-lg btn-block" type="submit">Upload</button>
                     </form>
